fixed shadow not showing

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header
   text-align: center;
   background-color: white;
   padding: 20px;
-  box-shadow: 0px 1px 10px grey;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, .5);
   z-index: 1;
 }
 
@@ -51,7 +51,7 @@ nav
 
 .menu-content li
 {
-  box-shadow: 0px 1px 5px -2px grey;
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, .5);
 }
 
 .menu-content li:hover
@@ -90,10 +90,58 @@ main
   z-index: 0;
 }
 
+main a
+{
+  text-decoration: none;
+  color: black;
+}
+
 .projet
 {
   text-align: center;
-  box-shadow: 0px 2px 5px -1px grey;
+  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, .5);
   min-height: 200px;
   flex: 1;
+  position: relative;
+}
+
+main a:nth-of-type(1) .projet
+{
+  background-color: white;
+  z-index: 10;
+}
+
+main a:nth-of-type(2) .projet
+{
+  background: url(images/mexico.png) no-repeat center;
+  background-size: cover;
+  z-index: 9;
+}
+
+main a:nth-of-type(3) .projet
+{
+  background: url(images/#) no-repeat center;
+  background-size: cover;
+  z-index: 8;
+}
+
+main a:nth-of-type(4) .projet
+{
+  background: url(images/#) no-repeat center;
+  background-size: cover;
+  z-index: 7;
+}
+
+main a:nth-of-type(5) .projet
+{
+  background: url(images/#) no-repeat center;
+  background-size: cover;
+  z-index: 6;
+}
+
+main a:nth-of-type(6) .projet
+{
+  background: url(images/#) no-repeat center;
+  background-size: cover;
+  z-index: 5;
 }
